# Example-Canary-SRC-Yew

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: index.html  main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
