[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "../server" }
srpc = "0.1.0"
canary = "0.1.0"
yew = "0.19"
wasm-bindgen-futures = "0.4"

# feature fixes for WASM
getrandom = { version = "0.2.3", features = ["js"] }
uuid = { version = "0.8.2", features = ["wasm-bindgen"] }

